objects/AssignedResource.object
<CustomObject>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>Used by Field Service Last Mile to personalize message with customer name</description>
        <formula>ServiceAppointment.Contact.FirstName &amp; &quot; &quot; &amp; ServiceAppointment.Contact.LastName</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__EstimatedTravelDistanceFrom__c</fullName>
        <label>Approximate Travel Distance From</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstimatedTravelDistanceTo__c</fullName>
        <label>Approximate Travel Distance To</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__EstimatedTravelTimeFrom__c</fullName>
        <label>Approximate Travel Time From (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Estimated_Travel_Time_From_Source__c</fullName>
        <label>Estimated Travel Time From Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Aerial</fullName>
                </value>
                <value>
                    <fullName>SLR</fullName>
                </value>
                <value>
                    <fullName>Predictive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Estimated_Travel_Time_To_Source__c</fullName>
        <label>Estimated Travel Time To Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Aerial</fullName>
                </value>
                <value>
                    <fullName>SLR</fullName>
                </value>
                <value>
                    <fullName>Predictive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Last_Updated_Epoch__c</fullName>
        <label>Last Updated Epoch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__UpdatedByOptimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdatedByOptimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__calculated_duration__c</fullName>
        <label>calculated duration (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>